deploy: ea344376a9026935474cf59d2b01c0ec7d7159bf

--- a/contact/index.html
+++ b/contact/index.html
@@ -107,7 +107,11 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 
 
 
-<p>Got a question about a custom order? Want to collaborate or wholesale? We&#8217;d love to hear from you. Email us directly at contact@jewelsbyj.com</p>
+<p>Have a question about your order, a custom request, or just want to say hello? We’d love to hear from you—use the form below to reach us!</p>
+
+
+
+<p></p>
 
 
 
